# ReUSnakeStateEstimation

./: README.md
VINS-Fusion/config/: vins_rviz_config.rviz
VINS-Fusion/config/realsense_d435i/: realsense_stereo_imu_config.yaml
VINS-Fusion/vins_estimator/launch/: laptop_435.launch  rs_camera_modify.launch
VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp
reusnake_control/: CMakeLists.txt  package.xml
reusnake_control/launch/: estimator_comparison.launch
reusnake_control/src/: robot_control.cpp
reusnake_control/src/estimation/: SnakeKinematics.cpp  SnakeKinematics.h  VirtualChassisKinematics.cpp  VirtualChassisKinematics.h  comparison_node.cpp  complementary_node.cpp  dummy_snake.cpp  ekf.cpp  ekf.hpp  ekf_acc.cpp  ekf_acc.hpp  ekf_vc.cpp  ekf_vc.hpp  estimator.cpp  estimator.hpp  estimator_node.cpp  estimator_node_acc.cpp  estimator_node_vc.cpp  gazebo_vo_compare.cpp  kf.cpp  kf.hpp  models.cpp  models.hpp  models_acc.cpp  models_acc.hpp  models_vc.cpp  models_vc.hpp  optimalCovariances.cpp  optimalCovariances.hpp  plot_angles.py  test_ekf.cpp  test_ekf2.cpp  ukf.cpp  ukf.hpp
reusnake_control/src/gait/: control_state_def.hpp
reusnake_control/src/input/: input_manager.hpp  input_manager_mobile_io.cpp  input_manager_mobile_io.hpp
reusnake_control/src/mr/: modern_robotics.h
reusnake_control/src/robot/: hebi_robot_base.cpp  hebi_robot_base.hpp  reusnake.cpp  reusnake.hpp  robot_base.cpp  robot_base.hpp
reusnake_control/src/test/: test.cpp  test_robot_markers.cpp  test_tf.cpp
reusnake_control/src/util/: util.cpp  util.hpp
reusnake_control/src/xml_util/: xml_helpers.cpp  xml_helpers.hpp
reusnake_matlab/: joy_test_snake.m  setup_script.m  snake_fk_cal.m  snake_fk_plot.m
reusnake_matlab/hebi/: GainStruct.m  HebiKinematics.m  HebiLookup.m  HebiPoseFilter.m  HebiTrajectory.m  HebiTrajectoryGenerator.m  HebiUtils.m  IoCommandStruct.m  hebi_config.m
reusnake_visualize/: CMakeLists.txt  package.xml
reusnake_visualize/launch/: visualize.launch
reusnake_visualize/rviz/: reusnake.rviz
reusnake_visualize/src/: gazebo_vio_compare.cpp  gazebo_vo_compare.cpp  visualize_main.cpp
reusnake_visualize/src/mr/: modern_robotics.cpp
reusnake_visualize/src/robot_markers/: builder.cpp
reusnake_visualize/urdf/: m6.gazebo.xacro  m6.urdf  m6.urdf.xacro  m6_left_leg.urdf.xacro  m6_right_leg.urdf.xacro  n6.gazebo  n6.xacro  n6_left_leg.xacro  n6_right_leg.xacro  rotary_module.xacro  sea_snake.urdf  sea_snake.urdf.xacro  snake.urdf  snake.urdf.xacro  snake_module.urdf.xacro
